feat: Complete posts search and display